--- a/src/app/depoiments/depoiments.component.html
+++ b/src/app/depoiments/depoiments.component.html
@@ -10,5 +10,15 @@
         <div class="card-depoiment">
             <p>"Me senti em casa, mesmo do outro lado do mundo." <strong>Carla L.</strong></p>
         </div>
+        <!-- Repetindo cards -->
+        <div class="card-depoiment">
+            <p>"Minha lua de mel foi perfeita graças a vocês." - <strong>Ana S.</strong></p>
+        </div>
+        <div class="card-depoiment">
+            <p>"Viajar ficou mais fácil com a ajuda da equipe." <strong>João M.</strong></p>
+        </div>
+        <div class="card-depoiment">
+            <p>"Me senti em casa, mesmo do outro lado do mundo." <strong>Carla L.</strong></p>
+        </div>
     </div>
 </div>
