--- a/src/app/my-footer/my-footer.component.html
+++ b/src/app/my-footer/my-footer.component.html
@@ -10,24 +10,24 @@
         </nav>
         <div>
             <h5>Sobre nós</h5>
-            <a href="#">Quem somos</a>
-            <a href="#">Nossa missão</a>
-            <a href="#">Trabalhe Conosco</a>
+            <a href="#" target="_blank">Quem somos</a>
+            <a href="#" target="_blank">Nossa missão</a>
+            <a href="#" target="_blank">Trabalhe Conosco</a>
         </div>
         <div>
             <h5>Ajuda</h5>
-            <a href="#">Perguntas Frequentes</a>
-            <a href="#">Suporte ao cliente</a>
-            <a href="#">Política de cancelamento</a>
+            <a href="#" target="_blank">Perguntas Frequentes</a>
+            <a href="#" target="_blank">Suporte ao cliente</a>
+            <a href="#" target="_blank">Política de cancelamento</a>
         </div>
         <div>
             <h5>Conecte-se</h5>
-            <a href="#">Youtube</a>
-            <a href="#">Blog</a>
-            <a href="#">LinkedIn</a>
-            <a href="#">Instagram</a>
-            <a href="#">TikTok</a>
+            <a href="#" target="_blank">Youtube</a>
+            <a href="#" target="_blank">Blog</a>
+            <a href="#" target="_blank">LinkedIn</a>
+            <a href="#" target="_blank">Instagram</a>
+            <a href="#" target="_blank">TikTok</a>
         </div>
     </div>
-    <div class="credits-development">Desenvolvido por <a href="www.linkedin.com/in/deguilhermebarbosa" target="_blank">Dev Guilherme</a> versão: 1.0</div>
+    <div class="credits-development">Desenvolvido por <a href="www.linkedin.com/in/deguilhermebarbosa">Dev Guilherme</a> versão: 1.0</div>
 </div>
