--- a/src/app/my-form/my-form.component.html
+++ b/src/app/my-form/my-form.component.html
@@ -10,4 +10,8 @@
         <label for="message">Messagem: </label>
         <input type="text" name="message" placeholder="Digite sua mensagem aqui" class="space-message">
     </form>
+    <div class="cta-links">
+        <a href="#destinations" class="cta-primary">Explorar Destinos</a>
+        <a href="#contacts" class="cta-secondary">Fale conosco</a>
+    </div>
 </div>
