--- a/src/app/my-header/my-header.component.css
+++ b/src/app/my-header/my-header.component.css
@@ -25,7 +25,7 @@ a {
     justify-content: center;
     align-items: center;
     font-family: cursive;
-    color: rgb(92, 228, 223);
+    color: rgba(4, 0, 215, 0.501);
     text-decoration: none;
     text-decoration-style: solid;
     opacity: 0;
@@ -66,5 +66,10 @@ a {
 @media (min-width: 426px) {
     nav {
         font-size: xx-large;
+    }
+
+    .logo{
+        width: 90px;
+        height: 90px;    
     }
 }
