--- a/src/app/depoiments/depoiments.component.css
+++ b/src/app/depoiments/depoiments.component.css
@@ -8,13 +8,15 @@
     align-items: center;
     text-align: center;
     overflow: hidden;
+    position: relative;
 }
 
 .container-depoiments {
     display: flex;
     flex-direction: row;
     gap: 5%;
-    padding: 5%;
+    padding-top: 6%;
+    animation: slideLeft 10s linear infinite;
 }
 
 .card-depoiment {
@@ -30,30 +32,21 @@
     border-radius: 60px 30px 70px 0;
     color: rgb(197, 197, 197);
     font-size: small;
-    opacity: 1;
 }
 
-@keyframes forLeft {
-    0% {
-        transform: translateX(100%);
-        opacity: 1;
+@keyframes slideLeft {
+    from {
+        transform: translateX(0);
     }
 
-    90% {
-        transform: translateX(-200%);
-        opacity: 1;
-    }
-
-    100% {
-        transform: translateX(-220);
-        opacity: 0;
+    to {
+        transform: translateX(-50%);
     }
 }
 
 @media (max-width: 500px) {
     .card-depoiment {
-        animation: forLeft 10s linear infinite;
-        transition: 3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
         width: 200px;
+        width: auto;
     }
 }
