--- a/src/app/destinations/destinations.component.css
+++ b/src/app/destinations/destinations.component.css
@@ -19,6 +19,11 @@
     padding: 3%;
 }
 
+.card-destinations:hover{
+    filter: drop-shadow(2px 4px 6px rgb(147, 0, 170));
+    scale: 1.03;
+}
+
 .card-destinations a{
     color: aqua;
     list-style-type: none;
