--- a/src/app/my-home/my-home.component.css
+++ b/src/app/my-home/my-home.component.css
@@ -12,7 +12,7 @@
 
 .my-home-content{
     position: absolute;
-    color: rgb(89, 89, 89);
+    color: rgb(45, 36, 128);
 }
 
 .cta-links{
@@ -26,7 +26,7 @@
         margin: 5px;
         border-radius:  30px 30px 30px 0;
         text-decoration: none;
-        background-color: rgb(48, 48, 185);
+        background-color: rgb(58, 58, 235);
         color: beige;
         animation: aparecerDeBaixo 2s ease-out forwards;
     }
@@ -35,6 +35,11 @@
         color:  rgb(48, 48, 185);
         zoom: 1.05;
         transition: 1.4s cubic-bezier(0.075, 0.82, 0.165, 1);
+    }
+
+    .cta-secondary{
+        color: rgb(49, 55, 100);
+        background-color: rgb(183, 183, 220);
     }
 }
 
@@ -46,7 +51,7 @@
         padding: 0;
         width: 100%;
         justify-content: center;
-        height: 100vh;
+        height: 50vh;
     }
 
     .my-home-content{
@@ -69,6 +74,10 @@
             width: 200px;
         }
     }
+
+    .cta-secondary{
+        background-color: rgb(114, 105, 165);
+    }
 }
 
 @media (min-width: 350px) and (max-width: 425px) {
@@ -89,5 +98,6 @@
         border-left: 2px solid rgb(48, 48, 185);
         padding-left: 2%;
         text-align: left;
+        font-size: xx-large;
     }
 }
