Atualizando projeto viva-mundo commit na versão 1.0

--- a/src/app/cta-finish/cta-finish.component.html
+++ b/src/app/cta-finish/cta-finish.component.html
@@ -3,6 +3,6 @@
     <p>Não deixe para depois. Comece sua próxima viagem agora mesmo.</p>
     <div class="cta-links">
         <a href="#destinations" class="cta-primary">Explorar Destinos</a>
-        <a href="#contacts" class="cta-secondary">Fale conosco</a>
+        <a href="#my-form" class="cta-secondary">Fale conosco</a>
     </div>
 </div>
