--- a/src/app/my-footer/my-footer.component.html
+++ b/src/app/my-footer/my-footer.component.html
@@ -5,29 +5,29 @@
                 <a href="#" style="--d: 2s">
                     <img src="assets/images/logo.png" alt="logo" class="logo">
                 </a>
-                <p>&copy; 2025 Viva Mundo. Todos os direitos reservados Ícones por <a href="www.icons8.com" target="_blank">Icons8</a>, imagens por <a href="www.freepik.com" target="_blank">Freepik</a> e <a href="www.pixabay.com" target="_blank">Pixabay</a>, fontes de texto <a href="www.googlefontes.com" target="_blank">Google Fontes</a> </p>
+                <p>&copy; 2025 Viva Mundo. Todos os direitos reservados Ícones por <a href="https://icons8.com" target="_blank">Icons8</a>, imagens por <a href="https://br.freepik.com" target="_blank">Freepik</a>, fontes de texto <a href="https://fonts.google.com" target="_blank">Google Fontes</a> </p>
             </li>
         </nav>
         <div>
             <h5>Sobre nós</h5>
-            <a href="#" target="_blank">Quem somos</a>
-            <a href="#" target="_blank">Nossa missão</a>
-            <a href="#" target="_blank">Trabalhe Conosco</a>
+            <a target="_blank">Quem somos</a>
+            <a target="_blank">Nossa missão</a>
+            <a target="_blank">Trabalhe Conosco</a>
         </div>
         <div>
             <h5>Ajuda</h5>
-            <a href="#" target="_blank">Perguntas Frequentes</a>
-            <a href="#" target="_blank">Suporte ao cliente</a>
-            <a href="#" target="_blank">Política de cancelamento</a>
+            <a target="_blank">Perguntas Frequentes</a>
+            <a target="_blank">Suporte ao cliente</a>
+            <a target="_blank">Política de cancelamento</a>
         </div>
         <div>
             <h5>Conecte-se</h5>
-            <a href="#" target="_blank">Youtube</a>
-            <a href="#" target="_blank">Blog</a>
-            <a href="#" target="_blank">LinkedIn</a>
-            <a href="#" target="_blank">Instagram</a>
-            <a href="#" target="_blank">TikTok</a>
+            <a target="_blank">Youtube</a>
+            <a target="_blank">Blog</a>
+            <a target="_blank">LinkedIn</a>
+            <a target="_blank">Instagram</a>
+            <a target="_blank">TikTok</a>
         </div>
     </div>
-    <div class="credits-development">Desenvolvido por <a href="www.linkedin.com/in/deguilhermebarbosa">Dev Guilherme</a> versão: 1.0</div>
+    <div class="credits-development">Desenvolvido por <a href="https://www.linkedin.com/in/devguilhermebarbosa/">Dev Guilherme</a> versão: 1.0</div>
 </div>
