--- a/src/app/my-form/my-form.component.html
+++ b/src/app/my-form/my-form.component.html
@@ -1,5 +1,5 @@
-<div class="my-form">
-    <h2>O que não pode faltar na sua viagem?</h2>
+<div class="my-form" id="my-form">
+    <h2 id="form-title">O que não pode faltar na sua viagem?</h2>
     <form>
         <label for="name">Nome:</label>
         <input type="text" name="nome" placeholder="Ex: João">
@@ -12,6 +12,6 @@
     </form>
     <div class="cta-links">
         <a href="#destinations" class="cta-primary">Explorar Destinos</a>
-        <a href="#contacts" class="cta-secondary">Fale conosco</a>
+        <a href="#form-title" class="cta-secondary">Fale conosco</a>
     </div>
 </div>
