--- a/src/app/my-home/my-home.component.html
+++ b/src/app/my-home/my-home.component.html
@@ -6,7 +6,7 @@
         </div>
         <div class="cta-links">
             <a href="#destinations" class="cta-primary">Explorar Destinos</a>
-            <a href="#contacts" class="cta-secondary">Fale conosco</a>
+            <a href="#my-form" class="cta-secondary">Fale conosco</a>
         </div>
     </div>
 </div>
