Adicionando butão para enviar email

--- a/src/app/my-form/my-form.component.html
+++ b/src/app/my-form/my-form.component.html
@@ -9,6 +9,8 @@
 
         <label for="message">Messagem: </label>
         <input type="text" name="message" placeholder="Digite sua mensagem aqui" class="space-message">
+
+        <button type="submit" class="input-email">Enviar email</button>
     </form>
     <div class="cta-links">
         <a href="#destinations" class="cta-primary">Explorar Destinos</a>
