--- a/src/app/my-form/my-form.component.css
+++ b/src/app/my-form/my-form.component.css
@@ -29,6 +29,23 @@ form{
         border: 1px solid rgb(93, 93, 96);
         padding: 4%;
     }
+
+    .input-email{
+        all: unset;
+        padding: 10px;
+        width: 100px;
+        height: auto;
+        background: linear-gradient( rgb(98, 98, 184), rgb(47, 47, 151), rgb(98, 98, 184));
+        color: aquamarine;
+        border-radius: 30px;
+        font-size: smaller;
+        transition: 0.5s cubic-bezier(0.39, 0.575, 0.565, 1);
+    }
+
+    .input-email:hover{
+        background-color:  rgb(47, 47, 151);
+        scale: 1.05;
+    }
 }
 
 .space-message{
